--- a/.env
+++ b/.env
@@ -18,5 +18,5 @@ dgShowInlineTitle=true
 dgShowFileTree=false
 dgEnableSearch=false
 dgShowToc=false
-dgLinkPreview=false
+dgLinkPreview=true
 dgShowTags=false
